--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -10,6 +10,7 @@
   author={Qi, Zhenzhou and Tung, Chung-Hsuan and Kalia, Anuj and Chen, Tingjun},
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={MobiCom},
   doi={10.1145/3636534.3690707},
@@ -20,6 +21,7 @@
   author={Gao, Zhihui and Qi, Zhenzhou and Chen, Tingjun},
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={MobiCom},
   doi={10.1145/3636534.3649390}
@@ -30,6 +32,7 @@
   author={Raj, Agastya and Wang, Zehao and Slyne, Frank and Chen, Tingjun and Kilper, Dan and Ruffini, Marco},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC}
 }
@@ -39,6 +42,7 @@
   author={Raj, Agastya and Wang, Zehao and Slyne, Frank and Chen, Tingjun and Kilper, Dan and Ruffini, Marco},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC}
 }
@@ -49,6 +53,7 @@
   booktitle={Proc. Privacy Enhancing
 Technologies Symposium (PETS'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC}
 }
@@ -58,6 +63,7 @@ Technologies Symposium (PETS'24)},
   author={Li, Yiming and Li, Zeyu and Gao, Zhihui and Chen, Tingjun},
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={DySPAN}
 }
@@ -76,6 +82,7 @@ Technologies Symposium (PETS'24)},
   author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Matsumura, Tatsuya and Nakamura, Masanori and Yamazaki, Etsushi and Kisaka, Yoshiaki},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={OFC},
   award={Postdeadline Paper}
@@ -86,6 +93,7 @@ Technologies Symposium (PETS'24)},
   author={Wang, Zehao and Huang, Yue-Kai and Han, Shaobo and Wang, Ting and Kilper, Dan and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={OFC},
   award={Top-Scored Paper, Corning Outstanding Student Paper Competition Finalist}
@@ -96,6 +104,7 @@ Technologies Symposium (PETS'24)},
   author={Mano, Toru and Huang, Yue-Kai and Borraccini, Giacomo and Ip, Ezra and D'Amico, Andrea and Wang, Zehao and Nishizawa, Hideki and Zussman, Gil and Chen, Tingjun and Wang, Ting and Asahi, Koji and Kilper, Daniel and Curri, Vittorio and Takasugi, Koichi},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -105,6 +114,7 @@ Technologies Symposium (PETS'24)},
   author={Ip, Ezra and Huang, Yue-Kai and Borraccini, Giacomo and Mano, Toru and Matsumura, Tatsuya and Nishizawa, Hideki and D'Amico, Andrea and Curri, Vittorio and Kilper, Daniel and Wang, Zehao and Zussman, Gil and Chen, Tingjun and Asahi, Koji},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -114,6 +124,7 @@ Technologies Symposium (PETS'24)},
   author={Hunt, David and Angell, Kristen and Qi, Zhenzhou and Chen, Tingjun and Pajic, Miroslav},
   booktitle={Proc. ISOC Network and Distributed System Security Symposium (NDSS’24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={NDSS}
 }
@@ -127,6 +138,7 @@ Technologies Symposium (PETS'24)},
   pages={2105--2120},
   year={2024},
   publisher={IEEE},
+  category={journal},
   bibtex_show={true},
   abbr={JSSC}
 }
@@ -139,6 +151,7 @@ Technologies Symposium (PETS'24)},
   number={4},
   pages={1304--1311},
   year={2024},
+  category={journal},
   publisher={IEEE/Optica},
   bibtex_show={true},
   abbr={JLT}
@@ -152,6 +165,7 @@ Technologies Symposium (PETS'24)},
   pages={313--329},
   year={2024},
   bibtex_show={true},
+  category={journal},
   abbr={PETS}
 }
 
@@ -164,6 +178,7 @@ Technologies Symposium (PETS'24)},
   pages={233--242},
   year={2024},
   publisher={IEEE/Optica},
+  category={journal},
   bibtex_show={true},
   abbr={JOCN}
 }
@@ -176,6 +191,7 @@ Technologies Symposium (PETS'24)},
   author={Gao, Zhihui and Chen, Yiran and Chen, Tingjun},
   booktitle={Proc. ACM International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={MobiHoc}
 }
@@ -186,6 +202,7 @@ Technologies Symposium (PETS'24)},
   author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
   booktitle={Proc. ACM International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={MobiHoc}
 }
@@ -195,6 +212,7 @@ Technologies Symposium (PETS'24)},
   author={Mano, Toru and Ferreira de Lima, Thomas and Huang, Yue-Kai and Wang, Zehao and Ishida, Wataru and Ip, Ezra and D'Amico, Andrea and Okamoto, Seiji and Inoue, Takeru and Nishizawa, Hideki and Curri, Vittorio and Zussman, Gil and Kilper, Daniel and Chen, Tingjun and Wang, Ting and Asahi, Koji and Takasugi,  Koichi},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC},
   award={Highest Scoring and Best Paper}
@@ -205,6 +223,7 @@ Technologies Symposium (PETS'24)},
   author={Raj, Agastya and Wang, Zehao and Slyne, Frank and Chen, Tingjun and Kilper, Dan and Ruffini, Marco},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC}
 }
@@ -214,6 +233,7 @@ Technologies Symposium (PETS'24)},
   author={Raj, Rishu and Xie, Shuang and Wang, Zehao and Chen, Tingjun and Kilper, Dan},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={ECOC}
 }
@@ -222,7 +242,10 @@ Technologies Symposium (PETS'24)},
   title={Transfer Learning-based {ROADM} {EDFA} Wavelength Dependent Gain Prediction Using Minimized Data Collection},
   author={Wang, Zehao and Kilper, Dan and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'23)},
-  year={2023}
+  year={2023},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
 }
 
 @inproceedings{huang2023field,
@@ -230,6 +253,7 @@ Technologies Symposium (PETS'24)},
   author={Huang, Yue-Kai and Wang, Zehao and Ip, Ezra and Qi, Zhenzhou and Zussman, Gil and Kilper, Dan and Asahi, Koji and Kageshima, Hideo and Aono, Yoshiaki and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'23)},
   year={2023},
+  category={conference},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -239,6 +263,7 @@ Technologies Symposium (PETS'24)},
   author={Raj, Rishu and Xie, Shuang and Wang, Zehao and Chen, Tingjun and Kilper, Dan},
   booktitle={Proc. IEEE ANTS'23 Workshop on Standards Driven Research},
   year={2023},
+  category={workshop},
   bibtex_show={true},
   abbr={OFC}
 }
@@ -250,7 +275,9 @@ Technologies Symposium (PETS'24)},
   volume={234},
   pages={109922},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  category={journal},
+  abbr={COMNET}
 }
 
 @article{wang2023open,
@@ -262,6 +289,7 @@ Technologies Symposium (PETS'24)},
   pages={588--599},
   year={2023},
   publisher={Optica},
+  category={journal},
   bibtex_show={true},
   abbr={JOCN}
 }
@@ -274,6 +302,7 @@ Technologies Symposium (PETS'24)},
   pages={103243},
   year={2023},
   publisher={Elsevier},
+  category={journal},
   bibtex_show={true},
   abbr={OFT}
 }
@@ -283,6 +312,136 @@ Technologies Symposium (PETS'24)},
   author={Qi, Zhenzhou and Gao, Zhihui and Tung, Chung-Hsuan and Chen, Tingjun},
   booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'23)},
   year={2023},
+  category={workshop},
   bibtex_show={true},
   abbr={WiNTECH}
+}
+
+# 2022
+
+@inproceedings{wang2022optical,
+  title={Optical Signal Spectrum Prediction Using Machine Learning and In-line Channel Monitors in a Multi-span {ROADM} System},
+  author={Wang, Zehao and Akinrintoyo, Emmanuel and Kilper, Dan and Chen, Tingjun},
+  booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'22)},
+  year={2022},
+  category={conference},
+  bibtex_show={true},
+  abbr={ECOC}
+}
+
+@article{chen2022software,
+  title={A Software-Defined Programmable Testbed for Beyond {5G} Optical-Wireless Experimentation at City-Scale},
+  author={Chen, Tingjun and Yu, Jiakai and Minakhmetov, Arthur and Gutterman, Craig and Sherman, Michael and Zhu, Shengxiang and Santaniello, Steven and Biswas, Aishik and Seskar, Ivan and Zussman, Gil and Kilper, Dan},
+  journal={IEEE Network},
+  volume={36},
+  number={2},
+  year={2022},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={IEEE Network}
+}
+
+# 2021
+
+@inproceedings{chen2021programmable,
+  title={Programmable and open-access millimeter-wave radios in the {PAWR} {COSMOS} testbed},
+  author={Chen, Tingjun and Maddala, Prasanthi and Skrimponis, Panagiotis and Kolodziejski, Jakub and Gu, Xiaoxiong and Paidimarri, Arun and Rangan, Sundeep and Zussman, Gil and Seskar, Ivan},
+  booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'21)},
+  year={2021},
+  category={workshop},
+  bibtex_show={true},
+  abbr={WiNTECH}
+}
+
+@inproceedings{lantz2021sdn,
+  title={{SDN}-Controlled Dynamic Front-Haul Provisioning, Emulated on Hardware and Virtual {COSMOS} Optical x-Haul Testbeds},
+  author={Lantz, Bob and Yu, Jiakai and Bhardwaj, Ayush and Díaz-Montiel, Alan A. and Quraishy, Aamir and Santaniello, Steven and Chen, Tingjun and Fujieda, Rina and Mukhopadhyay, Atri and Zussman, Gil and Ruffini, Marco and Kilper, Dan},
+  booktitle={Proc. IEEE/OSA Optical Fiber Communications Conference (OFC'21)},
+  year={2021},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
+@inproceedings{gu2021development,
+  title={Development of a compact 28 {GHz} software-defined phased array for a city-scale wireless research testbed},
+  author={Gu, Xiaoxiong and Paidimarri, Arun and Sadhu, Bodhisatwa and Baks, Christian and Lukashov, Stanislav and Yeck, Mark and Kwark, Young and Chen, Tingjun and Zussman, Gil and Seskar, Ivan and Valdes-Garcia, Alberto},
+  booktitle={Proc. IEEE MTT-S International Microwave Symposium (IMS'21)},
+  year={2021},
+  category={conference},
+  bibtex_show={true},
+  abbr={IMS}
+}
+
+@inproceedings{nagulu2021full,
+  title={Full-Duplex Receiver with Wideband Multi-Domain {FIR} Cancellation Based on Stacked-Capacitor, {N}-Path Switched-Capacitor Delay Lines Achieving $>$54 {dB} {SIC} Across 80 {MHz} {BW} and $>$15 {dBm} {TX} Power-Handling},
+  author={Nagulu, Aravind and Garikapati, Sasank and Essawy, Mostafa and Kadota, Igor and Chen, Tingjun and Natarajan, Arun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE International Solid-State Circuits Conference (ISSCC'21)},
+  year={2021},
+  category={conference},
+  bibtex_show={true},
+  abbr={ISSCC}
+}
+
+@article{kohli2021open,
+  title={Open-access full-duplex wireless in the {ORBIT} and {COSMOS} testbeds},
+  author={Kohli, Manav and Chen, Tingjun and Baraani Dastjerdi, Mahmood and Welles, Jackson and Seskar, Ivan and Krishnaswamy, Harish and Zussman, Gil},
+  journal={Computer Networks},
+  volume={199},
+  pages={108420},
+  year={2021},
+  publisher={Elsevier},
+  category={journal},
+  bibtex_show={true},
+  abbr={COMNET}
+}
+
+@article{chen2021wideband,
+  title={Wideband Full-Duplex Phased Array With Joint Transmit and Receive Beamforming: Optimization and Rate Gains},
+  author={Chen, Tingjun and Dastjerdi, Mahmood Baraani and Krishnaswamy, Harish and Zussman, Gil},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={29},
+  number={4},
+  pages={1591--1604},
+  year={2021},
+  publisher={IEEE/ACM}
+}
+
+@article{chen2021survey,
+  title={A survey and quantitative evaluation of integrated circuit-based antenna interfaces and self-interference cancellers for full-duplex},
+  author={Chen, Tingjun and Garikapati, Sasank and Nagulu, Aravind and Gaonkar, Aditya and Kohli, Manav and Kadota, Igor and Krishnaswamy, Harish and Zussman, Gil},
+  journal={IEEE Open Journal of the Communications Society},
+  volume={2},
+  pages={1753--1776},
+  year={2021},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={OJ-COMS}
+}
+
+@article{du2021directional,
+  title={Directional measurements in urban street canyons from macro rooftop sites at 28 {GHz} for 90\% outdoor coverage},
+  author={Du, Jinfeng and Chizhik, Dmitry and Valenzuela, Reinaldo A and Feick, Rodolfo and Castro, Guillermo and Rodriguez, Mauricio and Chen, Tingjun and Kohli, Manav and Zussman, Gil},
+  journal={IEEE Transactions on Antennas and Propagation},
+  volume={69},
+  number={6},
+  pages={3459--3469},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{nagulu2021a,
+  title={A full-duplex receiver with true-time-delay cancelers based on switched-capacitor-networks operating beyond the delay-bandwidth limit},
+  author={Nagulu, Aravind and Gaonkar, Aditya and Ahasan, Sohail and Garikapati, Sasank and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  journal={IEEE Journal of Solid-State Circuits},
+  volume={56},
+  number={5},
+  pages={1398--1411},
+  year={2021},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={JSSC}
 }
