added research and gallery pages

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -48,7 +48,7 @@
 }
 
 @inproceedings{sun2024sok1,
-  title={{SoK}: Secure Human-centered Wireless Sensing},
+  title={{SoK}: Secure Human-Centered Wireless Sensing},
   author={Sun, Wei and Chen, Tingjun and Gong, Neil},
   booktitle={Proc. Privacy Enhancing
 Technologies Symposium (PETS'24)},
@@ -158,7 +158,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{sun2024sok2,
-  title={{SoK}: Secure Human-centered Wireless Sensing},
+  title={{SoK}: Secure Human-Centered Wireless Sensing},
   author={Sun, Wei and Chen, Tingjun and Gong, Neil},
   journal={Proceedings on Privacy Enhancing Technologies},
   number={2},
@@ -170,7 +170,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{nishizawa2024fast,
-  title={Fast {WDM} provisioning with minimal probing: the first field experiments for {DC} exchanges},
+  title={Fast {WDM} Provisioning with Minimal Probing: The First Field Experiments for {DC} Exchanges},
   author={Nishizawa, Hideki and Mano, Toru and Ferreira de Lima, Thomas and Huang, Yue-Kai and Wang, Zehao and Ishida, Wataru and Kawashima, Masahisa and Ip, Ezra and D’Amico, Andrea and Okamoto, Seiji and Inoue, Takeru and Anazawa, Kazuya and Curri, Vittorio and Zussman, Gil and Kilper, Daniel and Chen, Tingjun and Wang, Ting and Asahi, Koji and Takasugi, Koichi},
   journal={IEEE/Optica Journal of Optical Communications and Networking},
   volume={16},
@@ -198,7 +198,7 @@ Technologies Symposium (PETS'24)},
 
 
 @inproceedings{promponas2023optimizing,
-  title={Optimizing sectorized wireless networks: Model, analysis, and algorithm},
+  title={Optimizing Sectorized Wireless Networks: Model, Analysis, and Algorithm},
   author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
   booktitle={Proc. ACM International Symposium on Theory, Algorithmic Foundations, and Protocol Design for Mobile Networks and Mobile Computing (MobiHoc'23)},
   year={2023},
@@ -281,7 +281,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{wang2023open,
-  title={Open {EDFA} gain spectrum dataset and its applications in data-driven {EDFA} gain modeling},
+  title={Open {EDFA} Gain Spectrum Dataset and Its Applications in Data-driven {EDFA} Gain Modeling},
   author={Wang, Zehao and Kilper, Daniel C and Chen, Tingjun},
   journal={Journal of Optical Communications and Networking},
   volume={15},
@@ -295,7 +295,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{akinrintoyo2023reconfigurable,
-  title={Reconfigurable topology testbeds: A new approach to optical system experiments},
+  title={Reconfigurable Topology Testbeds: A New Approach to Optical System Experiments},
   author={Akinrintoyo, Emmanuel and Wang, Zehao and Lantz, Bob and Chen, Tingjun and Kilper, Dan},
   journal={Optical Fiber Technology},
   volume={76},
@@ -345,7 +345,7 @@ Technologies Symposium (PETS'24)},
 # 2021
 
 @inproceedings{chen2021programmable,
-  title={Programmable and open-access millimeter-wave radios in the {PAWR} {COSMOS} testbed},
+  title={Programmable and Open-Access Millimeter-Wave Radios in the {PAWR} {COSMOS} Testbed},
   author={Chen, Tingjun and Maddala, Prasanthi and Skrimponis, Panagiotis and Kolodziejski, Jakub and Gu, Xiaoxiong and Paidimarri, Arun and Rangan, Sundeep and Zussman, Gil and Seskar, Ivan},
   booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'21)},
   year={2021},
@@ -365,7 +365,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @inproceedings{gu2021development,
-  title={Development of a compact 28 {GHz} software-defined phased array for a city-scale wireless research testbed},
+  title={Development of a Compact 28 {GHz} Software-Defined Phased Array for a City-Scale Wireless Research Testbed},
   author={Gu, Xiaoxiong and Paidimarri, Arun and Sadhu, Bodhisatwa and Baks, Christian and Lukashov, Stanislav and Yeck, Mark and Kwark, Young and Chen, Tingjun and Zussman, Gil and Seskar, Ivan and Valdes-Garcia, Alberto},
   booktitle={Proc. IEEE MTT-S International Microwave Symposium (IMS'21)},
   year={2021},
@@ -385,7 +385,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{kohli2021open,
-  title={Open-access full-duplex wireless in the {ORBIT} and {COSMOS} testbeds},
+  title={Open-Access Full-Duplex Wireless in the {ORBIT} and {COSMOS} Testbeds},
   author={Kohli, Manav and Chen, Tingjun and Baraani Dastjerdi, Mahmood and Welles, Jackson and Seskar, Ivan and Krishnaswamy, Harish and Zussman, Gil},
   journal={Computer Networks},
   volume={199},
@@ -409,7 +409,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{chen2021survey,
-  title={A survey and quantitative evaluation of integrated circuit-based antenna interfaces and self-interference cancellers for full-duplex},
+  title={A Survey and Quantitative Evaluation of Integrated Circuit-based Antenna Interfaces and Self-Interference Cancellers for Full-Duplex},
   author={Chen, Tingjun and Garikapati, Sasank and Nagulu, Aravind and Gaonkar, Aditya and Kohli, Manav and Kadota, Igor and Krishnaswamy, Harish and Zussman, Gil},
   journal={IEEE Open Journal of the Communications Society},
   volume={2},
@@ -422,7 +422,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{du2021directional,
-  title={Directional measurements in urban street canyons from macro rooftop sites at 28 {GHz} for 90\% outdoor coverage},
+  title={Directional Measurements in Urban Street Canyons from Macro Rooftop Sites at 28 {GHz} for 90\% Outdoor Coverage},
   author={Du, Jinfeng and Chizhik, Dmitry and Valenzuela, Reinaldo A and Feick, Rodolfo and Castro, Guillermo and Rodriguez, Mauricio and Chen, Tingjun and Kohli, Manav and Zussman, Gil},
   journal={IEEE Transactions on Antennas and Propagation},
   volume={69},
@@ -433,7 +433,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @article{nagulu2021a,
-  title={A full-duplex receiver with true-time-delay cancelers based on switched-capacitor-networks operating beyond the delay-bandwidth limit},
+  title={A Full-Duplex Receiver with True-Time-Delay Cancelers based on Switched-Capacitor-Networks Operating Beyond the Delay-Bandwidth Limit},
   author={Nagulu, Aravind and Gaonkar, Aditya and Ahasan, Sohail and Garikapati, Sasank and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
   journal={IEEE Journal of Solid-State Circuits},
   volume={56},
