updated badge color

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,7 +4,6 @@
 @string{aps = {American Physical Society,}}
 
 # 2024
-
 @inproceedings{qi2024savannah,
   title={Savannah: Efficient {mmWave} Baseband Processing with Minimal and Heterogeneous Resources},
   author={Qi, Zhenzhou and Tung, Chung-Hsuan and Kalia, Anuj and Chen, Tingjun},
@@ -28,7 +27,7 @@
 }
 
 @inproceedings{raj2024interference,
-  title={Interference Identification in Multi-User Optical Spectrum as a Service using Convolutional Neural Network},
+  title={Interference Identification in Multi-User Optical Spectrum as a Service Using Convolutional Neural Network},
   author={Raj, Agastya and Wang, Zehao and Slyne, Frank and Chen, Tingjun and Kilper, Dan and Ruffini, Marco},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'24)},
   year={2024},
@@ -38,7 +37,7 @@
 }
 
 @inproceedings{raj2024multi,
-  title={Multi-Span Optical Power Spectrum Evolution Modeling using {ML}-based Multi-Decoder Attention Framework},
+  title={Multi-Span Optical Power Spectrum Evolution Modeling Using {ML}-based Multi-Decoder Attention Framework},
   author={Raj, Agastya and Wang, Zehao and Slyne, Frank and Chen, Tingjun and Kilper, Dan and Ruffini, Marco},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'24)},
   year={2024},
@@ -50,12 +49,12 @@
 @inproceedings{sun2024sok1,
   title={{SoK}: Secure Human-Centered Wireless Sensing},
   author={Sun, Wei and Chen, Tingjun and Gong, Neil},
-  booktitle={Proc. Privacy Enhancing
-Technologies Symposium (PETS'24)},
+  booktitle={Proc. Privacy Enhancing Technologies Symposium (PETS'24)},
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC}
+  abbr={PETS},
+  doi={10.56553/popets-2024-0052}
 }
 
 @inproceedings{li2024geo2sigmap,
@@ -65,7 +64,8 @@ Technologies Symposium (PETS'24)},
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={DySPAN}
+  abbr={DySPAN},
+  doi={10.1109/DySPAN60163.2024.10632773}
 }
 
 @inproceedings{hunt2024radcloud,
@@ -73,6 +73,7 @@ Technologies Symposium (PETS'24)},
   author={Hunt, David and Luo, Shaocheng and Khazraei, Amir and Zhang, Xiao and Hallyburton, Spencer and Chen, Tingjun and Pajic, Miroslav},
   booktitle={Proc. IEEE International Conference on Robotics and Automation (ICRA'24)},
   year={2024},
+  category={conference},
   bibtex_show={true},
   abbr={ICRA}
 }
@@ -82,10 +83,10 @@ Technologies Symposium (PETS'24)},
   author={Sasai, Takeo and Borraccini, Giacomo and Huang, Yue-Kai and Nishizawa, Hideki and Wang, Zehao and Chen, Tingjun and Sone, Yoshiaki and Matsumura, Tatsuya and Nakamura, Masanori and Yamazaki, Etsushi and Kisaka, Yoshiaki},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  highlight={Postdeadline Paper},
   category={conference},
   bibtex_show={true},
-  abbr={OFC},
-  award={Postdeadline Paper}
+  abbr={OFC}
 }
 
 @inproceedings{wang2024multi,
@@ -93,10 +94,10 @@ Technologies Symposium (PETS'24)},
   author={Wang, Zehao and Huang, Yue-Kai and Han, Shaobo and Wang, Ting and Kilper, Dan and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
+  highlight={Top-Scored Paper, Corning Outstanding Student Paper Competition Finalist},
   category={conference},
   bibtex_show={true},
-  abbr={OFC},
-  award={Top-Scored Paper, Corning Outstanding Student Paper Competition Finalist}
+  abbr={OFC}
 }
 
 @inproceedings{mano2024modeling,
@@ -110,7 +111,7 @@ Technologies Symposium (PETS'24)},
 }
 
 @inproceedings{ip2024inline,
-  title={Inline Fiber Type Identification using In Service {Brillouin} Optical Time Domain Analysis},
+  title={Inline Fiber Type Identification Using In Service {Brillouin} Optical Time Domain Analysis},
   author={Ip, Ezra and Huang, Yue-Kai and Borraccini, Giacomo and Mano, Toru and Matsumura, Tatsuya and Nishizawa, Hideki and D'Amico, Andrea and Curri, Vittorio and Kilper, Daniel and Wang, Zehao and Zussman, Gil and Chen, Tingjun and Asahi, Koji},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'24)},
   year={2024},
@@ -126,7 +127,8 @@ Technologies Symposium (PETS'24)},
   year={2024},
   category={conference},
   bibtex_show={true},
-  abbr={NDSS}
+  abbr={NDSS},
+  doi={10.14722/ndss.2024.24135}
 }
 
 @article{garikapati2024full,
@@ -166,7 +168,8 @@ Technologies Symposium (PETS'24)},
   year={2024},
   bibtex_show={true},
   category={journal},
-  abbr={PETS}
+  abbr={PETS},
+  doi={10.56553/popets-2024-0052}
 }
 
 @article{nishizawa2024fast,
@@ -185,7 +188,6 @@ Technologies Symposium (PETS'24)},
 
 
 # 2023
-
 @inproceedings{gao2023swirls,
   title={Swirls: Sniffing {Wi-Fi} Using Radios with Low Sampling Rates},
   author={Gao, Zhihui and Chen, Yiran and Chen, Tingjun},
@@ -212,10 +214,10 @@ Technologies Symposium (PETS'24)},
   author={Mano, Toru and Ferreira de Lima, Thomas and Huang, Yue-Kai and Wang, Zehao and Ishida, Wataru and Ip, Ezra and D'Amico, Andrea and Okamoto, Seiji and Inoue, Takeru and Nishizawa, Hideki and Curri, Vittorio and Zussman, Gil and Kilper, Daniel and Chen, Tingjun and Wang, Ting and Asahi, Koji and Takasugi,  Koichi},
   booktitle={Proc. European Conference and Exhibition on Optical Communication (ECOC'23)},
   year={2023},
+  highlight={Highest Scoring and Best Paper},
   category={conference},
   bibtex_show={true},
-  abbr={ECOC},
-  award={Highest Scoring and Best Paper}
+  abbr={ECOC}
 }
 
 @inproceedings{raj2023self,
@@ -253,6 +255,7 @@ Technologies Symposium (PETS'24)},
   author={Huang, Yue-Kai and Wang, Zehao and Ip, Ezra and Qi, Zhenzhou and Zussman, Gil and Kilper, Dan and Asahi, Koji and Kageshima, Hideo and Aono, Yoshiaki and Chen, Tingjun},
   booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'23)},
   year={2023},
+  highlight={Top-Scored Paper},
   category={conference},
   bibtex_show={true},
   abbr={OFC}
@@ -318,7 +321,6 @@ Technologies Symposium (PETS'24)},
 }
 
 # 2022
-
 @inproceedings{wang2022optical,
   title={Optical Signal Spectrum Prediction Using Machine Learning and In-line Channel Monitors in a Multi-span {ROADM} System},
   author={Wang, Zehao and Akinrintoyo, Emmanuel and Kilper, Dan and Chen, Tingjun},
@@ -343,7 +345,6 @@ Technologies Symposium (PETS'24)},
 }
 
 # 2021
-
 @inproceedings{chen2021programmable,
   title={Programmable and Open-Access Millimeter-Wave Radios in the {PAWR} {COSMOS} Testbed},
   author={Chen, Tingjun and Maddala, Prasanthi and Skrimponis, Panagiotis and Kolodziejski, Jakub and Gu, Xiaoxiong and Paidimarri, Arun and Rangan, Sundeep and Zussman, Gil and Seskar, Ivan},
@@ -369,6 +370,7 @@ Technologies Symposium (PETS'24)},
   author={Gu, Xiaoxiong and Paidimarri, Arun and Sadhu, Bodhisatwa and Baks, Christian and Lukashov, Stanislav and Yeck, Mark and Kwark, Young and Chen, Tingjun and Zussman, Gil and Seskar, Ivan and Valdes-Garcia, Alberto},
   booktitle={Proc. IEEE MTT-S International Microwave Symposium (IMS'21)},
   year={2021},
+  highlight={Advanced Practice Paper Finalist},
   category={conference},
   bibtex_show={true},
   abbr={IMS}
@@ -444,4 +446,351 @@ Technologies Symposium (PETS'24)},
   category={journal},
   bibtex_show={true},
   abbr={JSSC}
+}
+
+% 2020
+@inproceedings{raychaudhuri2020challenge,
+  title={Challenge: {COSMOS}: A City-Scale Programmable Testbed for Experimentation with Advanced Wireless},
+  author={Raychaudhuri, Dipankar and Seskar, Ivan and Zussman, Gil and Korakis, Thanasis and Kilper, Dan and Chen, Tingjun and Kolodziejski, Jakub and Sherman, Michael and Kostic, Zoran and Gu, Xiaoxiong and Krishnaswamy, Harish and Maheshwari, Sumit and Skrimponis, Panagiotis and Gutterman, Craig},
+  booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'20)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={MobiCom}
+}
+
+@inproceedings{garikapati2020performance,
+  title={Performance Comparison of Time-domain and Frequency-domain {RF} Self-Interference Cancellation in Full-Duplex Wireless Systems},
+  author={Garikapati, Sasank and Gaonkar, Aditya and Nagulu, Aravind and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. Asilomar Conference on Signals, Systems, and Computers (Asilomar'20) (invited)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={Asilomar}
+}
+
+@inproceedings{nagulu2020full,
+  title={A Full-Duplex Receiver Leveraging Multiphase Switched-Capacitor-Delay based Multi-domain {FIR} Filter Cancelers},
+  author={Nagulu, Aravind and Gaonkar, Aditya and Ahasan, Sohail and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE Radio Frequency Integrated Circuits Symposium (RFIC'20)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={RFIC}
+}
+
+@inproceedings{minakhmetov2020experiments,
+  title={Experiments on Cloud-{RAN} Wireless Handover Using Optical Switching in a Dense Urban Testbed},
+  author={Minakhmetov, Artur and Gutterman, Craig and Chen, Tingjun and Yu, Jiakai and Ware, C{\'e}dric and Iannone, Luigi and Kilper, Daniel and Zussman, Gil},
+  booktitle={Proc. IEEE/OSA Optical Fiber Communications Conference (OFC'20)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
+@inproceedings{yu2020dual,
+  title={Dual Use {SDN} Controller for Management and Experimentation in a Field Deployed Testbed},
+  author={Yu, Jiakai and Gutterman, Craig and Minakhmetov, Artur and Sherman, Michael and Chen, Tingjun and Zhu, Shengxiang and Zussman, Gil and Seskar, Ivan and Kilper, Daniel},
+  booktitle={Proc. IEEE/OSA Optical Fiber Communications Conference (OFC'20)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
+@inproceedings{nagulu2020nonmagnetic,
+  title={Non-Magnetic 0.18 $\mu$m {SOI} Circulator with Multi-Watt Power Handling Based on Switched-Capacitor Clock Boosting},
+  author={Nagulu, Aravind and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE International Solid-State Circuits Conference (ISSCC'20)},
+  year={2020},
+  category={conference},
+  bibtex_show={true},
+  abbr={ISSCC}
+}
+
+@article{nagulu2020multi,
+  title={Multi-Watt, 1 {GHz} {CMOS} Circulator based on Switched-Capacitor Clock Boosting},
+  author={Nagulu, Aravind and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  journal={IEEE Journal of Solid-State Circuits},
+  volume={55},
+  number={12},
+  pages={3308--3321},
+  year={2020},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={JSSC}
+}
+
+@article{chen2020hybrid,
+  title={Hybrid Scheduling in Heterogeneous Half-and Full-Duplex Wireless Networks},
+  author={Chen, Tingjun and Diakonikolas, Jelena and Ghaderi, Javad and Zussman, Gil},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={28},
+  number={2},
+  pages={764--777},
+  year={2020},
+  publisher={IEEE/ACM},
+  category={journal},
+  bibtex_show={true},
+  abbr={TON}
+}
+
+@inproceedings{kohli2020open,
+  title={Open-Access Full-Duplex Wireless in the {ORBIT} and {COSMOS} Testbeds},
+  author={Kohli, Manav and Chen, Tingjun and Dastjerdi, Mahmood Baraani and Welles, Jackson and Seskar, Ivan and Krishnaswamy, Harish and Zussman, Gil},
+  booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'20) (invited)},
+  year={2020},
+  category={workshop},
+  bibtex_show={true},
+  abbr={WiNTECH}
+}
+
+@article{chen2020thesis,
+  title={Algorithms and Experimentation for Future Wireless Networks: From {Internet-of-Things} to Full-Duplex},
+  author={Chen, Tingjun},
+  journal={Ph.D. Dissertation, Columbia University},
+  year={2020},
+  publisher={Columbia University},
+  category={thesis},
+  bibtex_show={true},
+  abbr={Ph.D. Thesis}
+}
+
+% 2019
+@inproceedings{chen2019wideband1,
+  title={Wideband Full-Duplex Wireless via Frequency-Domain Equalization: Design and Experimentation},
+  author={Chen, Tingjun and Baraani Dastjerdi, Mahmood and Zhou, Jin and Krishnaswamy, Harish and Zussman, Gil},
+  booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'19)},
+  year={2019},
+  highlight={Student Research Competition (SRC) Winner - First Place},
+  category={conference},
+  bibtex_show={true},
+  abbr={MobiCom}
+}
+
+@inproceedings{chen2019wideband2,
+  title={Wideband full-Duplex Phased Array with Joint Transmit and Receive Beamforming: Optimization and Rate Gains},
+  author={Chen, Tingjun and Dastjerdi, Mahmood Baraani and Krishnaswamy, Harish and Zussman, Gil},
+  booktitle={Proc. ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc'19)},
+  year={2019},
+  highlight={Best Paper Finalist},
+  category={conference},
+  bibtex_show={true},
+  abbr={MobiHoc}
+}
+
+@inproceedings{yu2019cosmos,
+  title={{COSMOS}: Optical Architecture and Prototyping},
+  author={Yu, Jiakai and Chen, Tingjun and Gutterman, Craig and Zhu, Shengxiang and Zussman, Gil and Seskar, Ivan and Kilper, Daniel},
+  booktitle={Proc. IEEE/OSA Optical Fiber Communication Conference (OFC'19) (invited)},
+  year={2019},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
+@inproceedings{nagulu2019full,
+  title={A Full-Duplex Radio Using a {CMOS} Non-Magnetic Circulator Achieving $+$95 {dB} Overall {SIC}},
+  author={Nagulu, Aravind and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE AP-S Symposium on Antennas and Propagation and CNC/USNC-URSI Joint Meeting (AP-S/URSI'19) (invited)},
+  year={2019},
+  category={conference},
+  bibtex_show={true},
+  abbr={AP-S/URSI}
+}
+
+@article{reiskarimian2019one,
+  title={One-Way Ramp to a Two-Way Highway: Integrated Magnetic-free Nonreciprocal Antenna Interfaces for Full-Duplex Wireless},
+  author={Reiskarimian, Negar and Dinc, Tolga and Zhou, Jin and Chen, Tingjun and Dastjerdi, Mahmood Baraani and Diakonikolas, Jelena and Zussman, Gil and Krishnaswamy, Harish},
+  journal={IEEE Microwave Magazine},
+  volume={20},
+  number={2},
+  pages={56--75},
+  year={2019},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={Microw. Mag.}
+}
+
+@inproceedings{chen201928,
+  title={28 {GHz} Channel Measurements in the {COSMOS} Testbed Deployment Area},
+  author={Chen, Tingjun and Kohli, Manav and Dai, Tianyi and Estigarribia, Angel Daniel and Chizhik, Dmitry and Du, Jinfeng and Feick, Rodolfo and Valenzuela, Reinaldo A and Zussman, Gil},
+  booktitle={Proc. ACM Workshop on Millimeter-wave Networks and Sensing Systems (mmNets'19)},
+  year={2019},
+  category={workshop},
+  bibtex_show={true},
+  abbr={mmNets}
+}
+
+@inproceedings{nagulu2019single,
+  title={A Single Antenna Full-Duplex Radio Using a Non-Magnetic, CMOS Circulator with In-built Isolation Tuning},
+  author={Nagulu, Aravind and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE International Conference on Communications Workshops (ICC'19 Workshops)},
+  year={2019},
+  category={workshop},
+  bibtex_show={true},
+  abbr={ICC Workshop}
+}
+
+% 2018
+@inproceedings{chen2018fairness,
+  title={Fairness and Delay in Heterogeneous Half-and Full-Duplex Wireless Networks},
+  author={Chen, Tingjun and Diakonikolas, Jelena and Ghaderi, Javad and Zussman, Gil},
+  booktitle={Proc. Asilomar Conference on Signals, Systems, and Computers (Asilomar'18) (invited)},
+  year={2018},
+  category={conference},
+  bibtex_show={true},
+  abbr={Asilomar}
+}
+
+@inproceedings{chen2018hybrid,
+  title={Hybrid Scheduling in Heterogeneous Half-and Full-Duplex Wireless Networks},
+  author={Chen, Tingjun and Diakonikolas, Jelena and Ghaderi, Javad and Zussman, Gil},
+  booktitle={Proc. IEEE International Conference on Computer Communications (INFOCOM'18)},
+  year={2018},
+  category={conference},
+  bibtex_show={true},
+  abbr={INFOCOM}
+}
+
+@inproceedings{dastjerdi2018full,
+  title={Full Duplex Circulator-Receiver Phased Array Employing Self-Interference Cancellation via Beamforming},
+  author={Dastjerdi, Mahmood Baraani and Reiskarimian, Negar and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. IEEE Radio Frequency Integrated Circuits Symposium (RFIC'18)},
+  year={2018},
+  category={conference},
+  bibtex_show={true},
+  abbr={RFIC}
+}
+
+@inproceedings{dastjerdi2018self,
+  title={Self-Interference Cancellation via Beamforming in an Integrated Full Duplex Circulator-Receiver Phased Array},
+  author={Dastjerdi, Mahmood Baraani and Chen, Tingjun and Reiskarimian, Negar and Zussman, Gil and Krishnaswamy, Harish},
+  booktitle={Proc. International Conference on Signal Processing and Communications (SPCOM'18) (invited)},
+  year={2018},
+  category={conference},
+  bibtex_show={true},
+  abbr={SPCOM}
+}
+
+@article{chen2018maximizing,
+  title={Maximizing Broadcast Throughput Under Ultra-Low-Power Constraints},
+  author={Chen, Tingjun and Ghaderi, Javad and Rubenstein, Dan and Zussman, Gil and Rubenstein, Dan and Chen, Tingjun and Ghaderi, Javad and Zussman, Gil},
+  journal={IEEE/ACM Transactions on Networking},
+  volume={26},
+  number={2},
+  pages={779--792},
+  year={2018},
+  publisher={IEEE/ACM},
+  category={journal},
+  bibtex_show={true},
+  abbr={TON}
+}
+
+% 2017
+@article{zhou2017integrated,
+  title={Integrated Full Duplex Radios},
+  author={Zhou, Jin and Reiskarimian, Negar and Diakonikolas, Jelena and Dinc, Tolga and Chen, Tingjun and Zussman, Gil and Krishnaswamy, Harish},
+  journal={IEEE Communications Magazine},
+  volume={55},
+  number={4},
+  pages={142--151},
+  year={2017},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={Comm. Mag.}
+}
+
+@inproceedings{chen2017performance,
+  title={Performance Evaluation of Energy-Constrained Broadcast ({EconCast}) in Wireless Networks},
+  author={Chen, Tingjun and Ghaderi, Javad and Rubenstein, Dan and Zussman, Gil},
+  booktitle={Proc. IEEE Wireless Communications and Networking Conference Workshops (WCNC'17 Workshop)},
+  year={2017},
+  category={workshop},
+  bibtex_show={true},
+  abbr={WCNC Workshop}
+}
+
+
+%%%%%%%%%%
+%% 2016 %%
+%%%%%%%%%%
+@inproceedings{chen2016maximizing,
+  title={Maximizing Broadcast Throughput Under Ultra-Low-Power Constraints},
+  author={Chen, Tingjun and Ghaderi, Javad and Rubenstein, Dan and Zussman, Gil},
+  booktitle={Proc. ACM International on Conference on emerging Networking EXperiments and Technologies (CoNEXT'16)},
+  year={2016},
+  highlight={Best Paper Award},
+  category={conference},
+  bibtex_show={true},
+  abbr={CoNEXT}
+}
+
+@inproceedings{krishnaswamy2016full,
+  title={Full-Duplex in a Hand-held Device—From Fundamental Physics to Complex Integrated Circuits, Systems and Networks: An Overview of the {Columbia} {FlexICoN} Project},
+  author={Krishnaswamy, Harish and Zussman, Gil and Zhou, Jin and Mara{\v{s}}evi{\'c}, Jelena and Dinc, Tolga and Reiskarimian, Negar and Chen, Tingjun},
+  booktitle={Proc. Asilomar Conference on Signals, Systems and Computers (Asilomar'16) (invited)},
+  year={2016},
+  category={conference},
+  bibtex_show={true},
+  abbr={Asilomar}
+}
+
+@inproceedings{margolies2016panda1,
+  title={Panda: Neighbor Discovery on a Power Harvesting Budget},
+  author={Margolies, Robert and Grebla, Guy and Chen, Tingjun and Rubenstein, Dan and Zussman, Gil},
+  booktitle={Proc. IEEE International Conference on Computer Communications (INFOCOM'16)},
+  year={2016},
+  category={conferenc},
+  bibtex_show={true},
+  abbr={INFOCOM}
+}
+
+@article{margolies2016panda2,
+  title={Panda: Neighbor Discovery on a Power Harvesting Budget},
+  author={Margolies, Robert and Grebla, Guy and Chen, Tingjun and Rubenstein, Dan and Zussman, Gil},
+  journal={IEEE Journal on Selected Areas in Communications (JSAC)},
+  volume={34},
+  number={12},
+  pages={3606--3619},
+  year={2016},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={JSAC}
+}
+
+
+%%%%%%%%%%
+%% 2015 %%
+%%%%%%%%%%
+@article{zhou2015outage,
+  title={Outage Minimization for a Fading Wireless Link with Energy Harvesting Transmitter and Receiver},
+  author={Zhou, Sheng and Chen, Tingjun and Chen, Wei and Niu, Zhisheng},
+  journal={IEEE Journal on Selected Areas in Communications (JSAC)},
+  volume={33},
+  number={3},
+  pages={496--511},
+  year={2015},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={JSAC}
+}
+
+%%%%%%%%%%
+%% 2014 %%
+%%%%%%%%%%
+@inproceedings{chen2014power,
+  title={Power Control Policies for a Wireless Link with Energy Harvesting Transmitter and Receiver},
+  author={Chen, Tingjun and Zhou, Sheng and Chen, Wei and Niu, Zhisheng},
+  booktitle={Proc. International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WiOpt'14)},
+  year={2014},
+  category={conferenc},
+  bibtex_show={true},
+  abbr={WiOpt}
 }
