added some video links

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -3,6 +3,25 @@
 
 @string{aps = {American Physical Society,}}
 
+# 2025
+@article{wang2025multi,
+  title={Multi-Span Optical Power Spectrum Prediction Using Cascaded Learning with One-Shot End-to-End Measurement},
+  author={Wang, Zehao and Huang, Yue-Kai and Han, Shaobo and Kilper, Daniel and Chen, Tingjun},
+  journal={Journal of Optical Communications and Networking},
+  volume={17},
+  number={1},
+  pages={A23--A33},
+  year={2025},
+  publisher={IEEE},
+  highlight={Invited Paper to the JOCN Special Issue on Top-Scored Papers from IEEE/Optica OFC'24},
+  category={journal},
+  selected={true},
+  bibtex_show={true},
+  abbr={JOCN},
+  doi={10.1364/JOCN.533634},
+  code={https://github.com/functions-lab/COSMOS-EDFA-Dataset}
+}
+
 # 2024
 @inproceedings{qi2024savannah,
   title={Savannah: Efficient {mmWave} Baseband Processing with Minimal and Heterogeneous Resources},
@@ -10,9 +29,11 @@
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={MobiCom},
   doi={10.1145/3636534.3690707},
+  code={https://github.com/functions-lab/Savannah}
 }
 
 @inproceedings{gao2024mambas,
@@ -21,9 +42,34 @@
   booktitle={Proc. ACM International Conference on Mobile Computing and Networking (MobiCom'24)},
   year={2024},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={MobiCom},
-  doi={10.1145/3636534.3649390}
+  doi={10.1145/3636534.3649390},
+  code={https://github.com/functions-lab/MAMBAS-MobiCom2024}
+}
+
+@inproceedings{cheng2024spear,
+  title={{SPEAR}: Software-defined {Python}-Enhanced {RFSoC} for Wideband Radio Applications},
+  author={Cheng, Wei and Gao, Zhihui and Chen, Tingjun},
+  booktitle={Proc. ACM Workshop on Wireless Network Testbeds, Experimental evaluation \& CHaracterization (WiNTECH'24)},
+  year={2024},
+  category={workshop},
+  bibtex_show={true},
+  abbr={WiNTECH},
+  doi={10.1145/3636534.3697310},
+  code={https://github.com/functions-lab/SPEAR}
+}
+
+@inproceedings{gao2024deepmon,
+  title={{DeepMon}: {Wi-Fi} Monitoring Using Sub-{Nyquist} Sampling Rate Receivers with Deep Learning},
+  author={Gao, Zhihui and Zhang, Yunjia and Chen, Tingjun},
+  booktitle={Proc. ACM Workshop on Machine Learning for NextG Networks (MLNextG'24)},
+  year={2024},
+  category={workshop},
+  bibtex_show={true},
+  abbr={MLNextG},
+  doi={10.1145/3636534.3698250}
 }
 
 @inproceedings{raj2024interference,
@@ -63,9 +109,11 @@
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'24)},
   year={2024},
   category={conference},
+  selected={true},
   bibtex_show={true},
   abbr={DySPAN},
-  doi={10.1109/DySPAN60163.2024.10632773}
+  doi={10.1109/DySPAN60163.2024.10632773},
+  code={https://github.com/functions-lab/geo2sigmap}
 }
 
 @inproceedings{hunt2024radcloud,
@@ -153,10 +201,13 @@
   number={4},
   pages={1304--1311},
   year={2024},
-  category={journal},
   publisher={IEEE/Optica},
+  highlight={Invited Paper to the JLT Special Issue on Top-Scored Papers from IEEE/Optica OFC'23},
+  category={journal},
+  selected={true},
   bibtex_show={true},
-  abbr={JLT}
+  abbr={JLT},
+  doi={10.1109/JLT.2023.3319166}
 }
 
 @article{sun2024sok2,
@@ -183,7 +234,8 @@
   publisher={IEEE/Optica},
   category={journal},
   bibtex_show={true},
-  abbr={JOCN}
+  abbr={JOCN},
+  doi={10.1364/JOCN.505729}
 }
 
 
