--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,6 +4,26 @@
 @string{aps = {American Physical Society,}}
 
 # 2025
+@inproceedings{wang2025scalable,
+  title={Scalable Machine Learning Models for Optical Transmission System Management},
+  author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
+  booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25) (invited)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
+@inproceedings{wang2025multi,
+  title={Multi-Span OSNR and GSNR Prediction Using Cascaded Learning},
+  author={Wang, Zehao and Borraccini, Giacomo and D'Amico, Andrea and Huang, Yue-Kai and Wang, Ting and Kilper, Dan and Asahi, Koji and Chen, Tingjun},
+  booktitle={Proc. IEEE/Optica Optical Fiber Communications Conference (OFC'25)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={OFC}
+}
+
 @article{wang2025multi,
   title={Multi-Span Optical Power Spectrum Prediction Using Cascaded Learning with One-Shot End-to-End Measurement},
   author={Wang, Zehao and Huang, Yue-Kai and Han, Shaobo and Kilper, Daniel and Chen, Tingjun},
