--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,6 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 # 2025
+@article{kohli2025design,
+  title={Design and Testbed Deployment of Frequency-Domain Equalization Full Duplex Radios},
+  author={Kohli, Manav and Baraani Dastjerdi, Mahmood and Zhou, Jin and Seskar, Ivan and Krishnaswamy, Harishand and Zussman, Gil and Chen, Tingjun},
+  journal={IEEE Transactions on Wireless Communications (TWC) (to appear)},
+  year={2025},
+  publisher={IEEE},
+  category={journal},
+  bibtex_show={true},
+  abbr={TWC}
+}
+
 @inproceedings{wang2025scalable,
   title={Scalable Machine Learning Models for Optical Transmission System Management},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
