--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -15,6 +15,17 @@
   abbr={TWC}
 }
 
+@inproceedings{li2025generalized,
+  title={A Generalized Deep Learning Model for Signal Coverage Prediction in the CBRS Band},
+  author={Li, Yiming and Gao, Zhihui and Palathinkal, Joshua and Ghosh, Monisha and Chen, Tingjun},
+  booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'25)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={DySPAN},
+  code={https://github.com/functions-lab/geo2sigmap}
+}
+
 @inproceedings{wang2025scalable,
   title={Scalable Machine Learning Models for Optical Transmission System Management},
   author={Wang, Zehao and Raj, Agastya and Borraccini, Giacomo and Han, Shaobo and Huang, Yue-Kai and Wang, Ting and Ruffini, Marco and Kilper, Dan and Chen, Tingjun},
