--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,6 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 # 2025
+@article{gao2025disaggregated,
+  title={Disaggregated Deep Learning via In-Physics Computing at Radio Frequency},
+  author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
+  journal={arXiv preprint arXiv:2504.17752},
+  year={2025},
+  category={preprint},
+  selected={true},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
 @article{kohli2025design,
   title={Design and Testbed Deployment of Frequency-Domain Equalization Full Duplex Radios},
   author={Kohli, Manav and Baraani Dastjerdi, Mahmood and Zhou, Jin and Seskar, Ivan and Krishnaswamy, Harishand and Zussman, Gil and Chen, Tingjun},
