added ondm'25 paper

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -27,6 +27,16 @@
 }
 
 @inproceedings{li2025generalized,
+  title={WDM System Stimulated Raman Scattering Spectrum and Tilt Prediction using CNN-based Transfer Learning},
+  author={Xie, Shuang and Raj, Rishu and Briantcev, Dmitrii and Wang, Zehao and Chen, Tingjun and Kilper Dan},
+  booktitle={Proc. IEEE/IFIP International Conference on Optical Network Design and Modeling (ONDM'25)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={ONDM}
+}
+
+@inproceedings{li2025generalized,
   title={A Generalized Deep Learning Model for Signal Coverage Prediction in the CBRS Band},
   author={Li, Yiming and Gao, Zhihui and Palathinkal, Joshua and Ghosh, Monisha and Chen, Tingjun},
   booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'25)},
