--- a/_news/2025-04-15-ntt-grant.md
+++ b/_news/2025-04-15-ntt-grant.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Received a resaerch grant from NTT to work on machine learnign tehcnology for resilient optical networks.
+Received a research grant from NTT to work on machine learnign tehcnology for resilient optical networks.
