added paper and wintech news

--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,6 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 # 2025
+@article{qin2025phantora,
+  title={Phantora: Live GPU Cluster Simulation for Machine Learning System Performance Estimation},
+  author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R and Zhuo, Danyang},
+  journal={arXiv preprint arXiv:2505.01616},
+  year={2025},
+  category={preprint},
+  selected={false},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
 @article{gao2025disaggregated,
   title={Disaggregated Deep Learning via In-Physics Computing at Radio Frequency},
   author={Gao, Zhihui and Vadlamani, Sri Krishna and Sulimany, Kfir and Englund, Dirk and Chen, Tingjun},
@@ -18,7 +29,10 @@
 @article{kohli2025design,
   title={Design and Testbed Deployment of Frequency-Domain Equalization Full Duplex Radios},
   author={Kohli, Manav and Baraani Dastjerdi, Mahmood and Zhou, Jin and Seskar, Ivan and Krishnaswamy, Harishand and Zussman, Gil and Chen, Tingjun},
-  journal={IEEE Transactions on Wireless Communications (TWC) (to appear)},
+  journal={IEEE Transactions on Wireless Communications (TWC)},
+  volume={24},
+  number={5},
+  pages={4377--4391},
   year={2025},
   publisher={IEEE},
   category={journal},
