--- a/_bibliography/papers_tingjunchen.bib
+++ b/_bibliography/papers_tingjunchen.bib
@@ -4,6 +4,40 @@
 @string{aps = {American Physical Society,}}
 
 # 2025
+
+@inproceedings{hunt2025ragnnarok,
+  title={RaGNNarok: A Light-Weight Graph Neural Network for Enhancing Radar Point Clouds on Unmanned Ground},
+  author={Hunt, David and Luo, Shaocheng and Hallyburton, Robert and Li, Yi and Nillongo, Shafii and Chen, Tingjun and Pajic, Miroslav},
+  booktitle={Proc. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'25)},
+  year={2025},
+  category={conference},
+  bibtex_show={true},
+  abbr={IROS}
+}
+
+@article{Promponas2025on,
+  title={On the Optimization and Stability of Sectorized Wireless Networks},
+  author={Promponas, Panagiotis and Chen, Tingjun and Tassiulas, Leandros},
+  journal={IEEE/ACM Transactions on Networking (to appear)},
+  year={2025},
+  publisher={IEEE/ACM},
+  category={journal},
+  selected={false},
+  bibtex_show={true},
+  abbr={TON}
+}
+
+@article{gao2025disaggregated,
+  title={Machine Intelligence on Wireless Edge Networks},
+  author={Vadlamani, Sri Krishna and Sulimany, Kfir and Gao, Zhihui and Chen, Tingjun and Englund, Dirk},
+  journal={arXiv preprint arXiv:2506.12210},
+  year={2025},
+  category={preprint},
+  selected={true},
+  bibtex_show={true},
+  abbr={arXiv}
+}
+
 @article{qin2025phantora,
   title={Phantora: Live GPU Cluster Simulation for Machine Learning System Performance Estimation},
   author={Qin, Jianxing and Chen, Jingrong and Kong, Xinhao and Wu, Yongji and Luo, Liang and Wang, Zhaodong and Zhang, Ying and Chen, Tingjun and Lebeck, Alvin R and Zhuo, Danyang},
@@ -29,7 +63,7 @@
 @article{kohli2025design,
   title={Design and Testbed Deployment of Frequency-Domain Equalization Full Duplex Radios},
   author={Kohli, Manav and Baraani Dastjerdi, Mahmood and Zhou, Jin and Seskar, Ivan and Krishnaswamy, Harishand and Zussman, Gil and Chen, Tingjun},
-  journal={IEEE Transactions on Wireless Communications (TWC)},
+  journal={IEEE Transactions on Wireless Communications},
   volume={24},
   number={5},
   pages={4377--4391},
